# GeneratePrevisibines-rs

./: .gitignore  CLAUDE.md  Cargo.toml
src/: builder.rs  cli.rs  lib.rs  main.rs  paths.rs  ui.rs  utils.rs  validation.rs
src/tools/: archive.rs  creation_kit.rs  mod.rs  xedit.rs
